--- a/metric-learn-jmlr.tex
+++ b/metric-learn-jmlr.tex
@@ -46,7 +46,7 @@
        \addr INRIA, France
        \AND
        \name CJ Carey \email perimosocordiae@gmail.com \\
-       \addr Google Inc., United States
+       \addr Google LLC, United States
        \AND
        \name Yuan Tang \email terrytangyuan@gmail.com \\
        \addr Ant Financial, United States
@@ -128,9 +128,10 @@ Its API is compatible with \texttt{scikit-learn} \citep{scikit-learn}, a promine
 Metric learning is generally formulated as an optimization problem where one seeks to find the parameters of a distance function that minimize some objective function over the input data.
 All algorithms currently implemented in \texttt{metric-learn} learn so-called Mahalanobis distances. Given a real-valued parameter matrix $L$ of shape \texttt{(n\_components, n\_features)} where \texttt{n\_features} is the
 number of features describing the data, the associated Mahalanobis distance between two points $x$ and $x'$ is defined as $D_L(x, x') = \sqrt{(Lx-Lx')^\top(Lx-Lx')}$.
-This is equivalent to a Euclidean distance after the linear transformation of the feature space defined by $L$ (taking $L$ to be the identity matrix recovers the standard Euclidean distance).
+This is equivalent to Euclidean distance after linear transformation of the feature space defined by $L$.
+Thus, if $L$ is the identity matrix, standard Euclidean distance is recovered.
 Mahalanobis distance metric learning can thus be seen as learning a new
-embedding space of (potentially reduced) dimension \texttt{n\_components}.
+embedding space, with potentially reduced dimension \texttt{n\_components}.
 Note that $D_L$ can also be written as $D_L(x, x') = \sqrt{(x - x')^\top M (x - x')}$, where we refer to $M = L^\top L$ as the Mahalanobis matrix.
 
 % Strictly speaking, Mahalanobis distances are "pseudo-metrics": they satisfy
@@ -166,8 +167,10 @@ Note that $D_L$ can also be written as $D_L(x, x') = \sqrt{(x - x')^\top M (x - 
     illustrated on face image data taken from the Labeled Faces in the Wild dataset \citep{Huang12}.}\label{fig:flowers}
 \end{figure}
 
-Metric learning algorithms can be classified according to the form of data supervision that they need to learn the metric. \texttt{metric-learn} currently implements algorithms that fall into the following categories.
-\emph{Supervised learners} learn from a standard labeled dataset and essentially aim to bring closer together points from the same class while spreading further away points from a different class. For instance, data points could be face images and the class could be the identity of the person (see Figure~\ref{fig:full}). 
+Metric learning algorithms can be categorized according to the form of data supervision they require to learn a metric.
+\texttt{metric-learn} currently implements algorithms that fall into the following categories.
+\emph{Supervised learners} learn from a dataset with one label per training example, aiming to bring together points from the same class while spreading points from different classes.
+For instance, data points could be face images and the class could be the identity of the person (see Figure~\ref{fig:full}). 
 % \todo[inline]{ces figures ne sont pas très vendeuses. je propose de faire une figure conceptuelle en prenant l'exemple des faces expliquant la différence entre le supervisé, les paires et les quadruplets. on peut s'inspirer de \url{http://cedric.cnam.fr/~thomen/papers/Law_ICCV_2013_QWise.pdf}}
 % \begin{figure}[H]
 % \centering
@@ -188,8 +191,10 @@ Metric learning algorithms can be classified according to the form of data super
 % \end{figure}
 % \paragraph{Weakly Supervised Metric Learning algorithms}
 % Weakly Supervised algorithms use less information than the previous algorithms: they only take tuple of points and possibly a corresponding label. See below for more concrete examples of algorithms learning on tuples.
-\emph{Pair learners} take as input a set of pairs of points with a pair label indicating whether the two points are similar or not. They aim to learn a metric that brings pairs of similar points closer together, and pairs of dissimilar points further away from each other. Such supervision is often simpler to collect than class labels in applications when there are many labels. %, since annotators will only need to say whether images are similar or not, and will not have to assign a label in a huge list of those.
-For instance, a human annotator can often quickly decide whether two face images correspond to the same person (Figure~\ref{fig:pairs}) while matching a face to its identity among many possible people can be difficult. 
+\emph{Pair learners} require a set of pairs of points, with each pair labeled to indicate whether the two points are similar or not.
+These methods aim to learn a metric that brings pairs of similar points closer together and pushes pairs of dissimilar points further away from each other.
+Such supervision is often simpler to collect than class labels in applications when there are many labels. %, since annotators will only need to say whether images are similar or not, and will not have to assign a label in a huge list of those.
+For instance, a human annotator can often quickly decide whether two face images correspond to the same person (Figure~\ref{fig:pairs}) while matching a face to its identity among many possible people may be difficult. 
 % \begin{figure}[H]
 % \centering
 % \begin{subfigure}{.5\textwidth}
@@ -207,7 +212,9 @@ For instance, a human annotator can often quickly decide whether two face images
 % \caption{Metric learning with pairwise constraints}
 % \label{fig:test}
 % \end{figure}
-Finally, \emph{quadruplet learners} take as input quadruplets of points and aim to learn a metric that brings the two first points of each quadruplet closer than the two last points. This can be used to learn a metric space in which closer points have closer values of an attribute of interest, which may be continuous and difficult to annotate accurately (e.g., the age of a person on an image, see Figure \ref{fig:quadruplets}). Quadruplet supervision is also used in problems with a class hierarchy.
+Finally, \emph{quadruplet learners} consider 4-tuples of points and aim to learn a metric that brings the two first points of each quadruplet closer than the two last points.
+This can be used to learn a metric space in which closer points are more similar with respect to an attribute of interest, which may be continuous and difficult to annotate accurately (e.g., the age of a person on an image, see Figure \ref{fig:quadruplets}).
+Quadruplet supervision is also used in problems with a class hierarchy.
 %for instance, we want to learn a metric that puts closer together people from approximately the same age.
 
 
@@ -235,11 +242,21 @@ Finally, \emph{quadruplet learners} take as input quadruplets of points and aim 
 
 \section{Overview of the Package}
 
-The current release of \texttt{metric-learn} (v.0.5.0) can be installed from the Python Package Index (PyPI), for Python 2.7 and 3.5 or later. The source code is available on GitHub at \url{http://github.com/scikit-learn-contrib/metric-learn} and is free of use, provided under the MIT licence. \texttt{metric-learn} only relies on core libraries from the SciPy ecosystem: \texttt{numpy}, \texttt{scipy}, and \texttt{scikit-learn}. A detailed documentation (including installation guidelines, the description of the algorithms and the API, as well as examples) is available at \url{http://contrib.scikit-learn.org/metric-learn}.
-The development is collaborative and open to all contributors through the usual GitHub workflow (issues and pull requests). The interest of the community for the package is demonstrated by its recent inclusion in the \texttt{scikit-learn-contrib} organization which hosts high-quality \texttt{scikit-learn}-compatible projects,\footnote{\url{https://github.com/scikit-learn-contrib/scikit-learn-contrib}} and by its more than 740 stars and 170 forks on GitHub (at the time of writing).
-The quality of the code is ensured by a thorough test coverage (96\% as of July 2019). Every new contribution is automatically checked by a continuous integration platform to enforce sufficient test coverage as well as syntax formatting with \texttt{flake8}. %, which allows easy contribution for incoming developers, which can have their code automatically checked.
+The current release of \texttt{metric-learn} (v.0.5.0) can be installed from the Python Package Index (PyPI), for Python 2.7 and 3.5 or later. 
+The source code is available on GitHub at \url{http://github.com/scikit-learn-contrib/metric-learn} and is free to use, provided under the MIT license. 
+\texttt{metric-learn} depends on core libraries from the SciPy ecosystem: \texttt{numpy}, \texttt{scipy}, and \texttt{scikit-learn}.
+Detailed documentation (including installation guidelines, the description of the algorithms and the API, as well as examples) is available at \url{http://contrib.scikit-learn.org/metric-learn}.
+The development is collaborative and open to all contributors through the usual GitHub workflow of issues and pull requests.
+Community interest for the package has been demonstrated by its recent inclusion in the \texttt{scikit-learn-contrib} organization which hosts high-quality \texttt{scikit-learn}-compatible projects,\footnote{\url{https://github.com/scikit-learn-contrib/scikit-learn-contrib}} and by its more than 740 stars and 170 forks on GitHub at the time of writing.
+The quality of the code is ensured by a thorough test coverage (96\% as of July 2019).
+Every new contribution is automatically checked by a continuous integration platform to enforce sufficient test coverage as well as syntax formatting with \texttt{flake8}. %, which allows easy contribution for incoming developers, which can have their code automatically checked.
 
-Currently, \texttt{metric-learn} implements 9 popular metric learning algorithms. Supervised learners include Neighborhood Components Analysis \citep[NCA,][]{Goldberger04}, Large Margin Nearest Neighbors \citep[LMNN,][]{Weinberger09}, Relative Components Analysis \citep[RCA,][]{Shental02},\footnote{RCA takes as input slightly weaker supervision in the form of \emph{chunklets} (groups of points of same class).} Local Fisher Discriminant Analysis \citep[LFDA,][]{Sugiyama07} and Metric Learning for Kernel Regression \citep[MLKR,][]{Weinberger07}. The latter is designed for regression problems with continuous labels. Pair learners include Mahalanobis Metric for Clustering \citep[MMC,][]{Xing2002a}, Information Theoretic Metric Learning \citep[ITML,][]{Davis07} and Sparse High-Dimensional Metric Learning \citep[SDML,][]{Qi09}. The package implements one quadruplet learner: Metric Learning from Relative Comparisons by Minimizing Squared Residual \citep[LSML,][]{Liu12}. Detailed descriptions of these algorithms can be found in the package documentation.
+Currently, \texttt{metric-learn} implements 9 popular metric learning algorithms.
+Supervised learners include Neighborhood Components Analysis \citep[NCA,][]{Goldberger04}, Large Margin Nearest Neighbors \citep[LMNN,][]{Weinberger09}, Relative Components Analysis \citep[RCA,][]{Shental02},\footnote{RCA takes as input slightly weaker supervision in the form of \emph{chunklets} (groups of points of same class).} Local Fisher Discriminant Analysis \citep[LFDA,][]{Sugiyama07} and Metric Learning for Kernel Regression \citep[MLKR,][]{Weinberger07}.
+The latter is designed for regression problems with continuous labels.
+Pair learners include Mahalanobis Metric for Clustering \citep[MMC,][]{Xing2002a}, Information Theoretic Metric Learning \citep[ITML,][]{Davis07} and Sparse High-Dimensional Metric Learning \citep[SDML,][]{Qi09}.
+The package implements one quadruplet learner: Metric Learning from Relative Comparisons by Minimizing Squared Residual \citep[LSML,][]{Liu12}.
+Detailed descriptions of these algorithms can be found in the package documentation.
 
 \section{Software Architecture and API}
 
@@ -247,16 +264,17 @@ Currently, \texttt{metric-learn} implements 9 popular metric learning algorithms
 \texttt{metric-learn} provides a unified interface to all metric learning algorithms. %, including 
 %weakly supervised ones (pair and quadruplet learners)
 %those whose input format differs from the classic machine learning setting.
-It is designed to be fully compatible with the functionalities of \texttt{scikit-learn}.
+It is designed to be fully compatible with the functionality of \texttt{scikit-learn}.
 % We briefly explain how the package is structured.
-All metric learners inherit from an abstract \texttt{BaseMetricLearner} class, which itself inherits from \texttt{scikit-learn}'s \texttt{BaseEstimator}. All classes inheriting from \texttt{BaseMetricLearner} should implement two methods, \texttt{get\_metric} (returning a function that computes the distance, which can be plugged into \texttt{scikit-learn} estimators like \texttt{KMeansClustering}) and \texttt{score\_pairs} (returning the distances between a set of pairs of points passed as a 3D array).
+All metric learners inherit from an abstract \texttt{BaseMetricLearner} class, which itself inherits from \texttt{scikit-learn}'s \texttt{BaseEstimator}. All classes inheriting from \texttt{BaseMetricLearner} should implement two methods: \texttt{get\_metric} (returning a function that computes the distance, which can be plugged into \texttt{scikit-learn} estimators like \texttt{KMeansClustering}) and \texttt{score\_pairs} (returning the distances between a set of pairs of points passed as a 3D array).
 % \todo[inline]{Should I talk about the classes etc ? Not useful since they are not visible by the user right ?}
 % \todo[inline]{I think it can be nice, this is not documentation, but explaining how things are coded}
 %\texttt{metric-learn}'s API is designed to be fully compatible with \texttt{scikit-learn} API (\cite{scikit-learn}). 
 Mahalanobis distance learning algorithms also inherit from a \texttt{MahalanobisMixin} interface, which has an attribute \texttt{components\_} corresponding to the transformation matrix $L$ of the Mahalanobis distance. \texttt{MahalanobisMixin} implements \texttt{get\_metric} and \texttt{score\_pairs} accordingly as well as a few additional methods. In particular, \texttt{transform} allows to transform data using \texttt{components\_}, and \texttt{get\_mahalanobis\_matrix} returns the Mahalanobis matrix $M=L^TL$.
 % This latter can return the mahalanobis matrix with the method \texttt{get\_mahalanobis\_matrix}. Like scikit-learn's algorithms, it can also return a \texttt{components\_} attributes that is the transformation matrix \texttt{L}. Since all these metric learner learn this implicit transformation $L$, they can project the input in the new space using \texttt{transform}. A distance function can also be extracted from them using \texttt{get\_metric}, that can further be used in any scikit-learn estimator like \texttt{KMeansClustering}. They can also return the distance between a dataset of pairs (in the 3D array format (see below), using \texttt{score\_pairs}.
 
-Supervised metric learners inherit from \texttt{scikit-learn}'s base class \texttt{TransformerMixin}, just like \texttt{sklearn.LinearDiscriminantAnalysis} for instance. As such, they are compatible with pipelining with other estimators (e.g., via \texttt{sklearn.pipeline.Pipeline}).
+Supervised metric learners inherit from \texttt{scikit-learn}'s base class \texttt{TransformerMixin}, the same base class used by \texttt{sklearn.LinearDiscriminantAnalysis} and others.
+As such, they are compatible for pipelining with other estimators via \texttt{sklearn.pipeline.Pipeline}.
 % (they pass all scikit-learn's "estimators checks"). 
 %  They can easily be pipelined with nearest neighbors estimators to improve their performance: \texttt{better\_knn = sklearn.pipeline.make\_pipeline(NCA(), KNeighborsClassifier())} (TODO: sth to explain NCA is in metric-learn)
 % \aurelien{mention pipelining}
@@ -266,10 +284,13 @@ Supervised metric learners inherit from \texttt{scikit-learn}'s base class \text
 % This format is what allows all these API choices, since slicing along the 1st dimension
 % While a classical input array \texttt{X} in \texttt{scikit-learn} has shape \texttt{(n\_samples, n\_features)}, an array of tuples has shape \texttt{(n\_tuples, t, n\_features)}, where \texttt{t} is the number of elements in a tuple (e.g. 2 for pairs).
 % Note that \texttt{scikit-learn} accepts arrays in a broad sense, in what they call "array-like" objects. \texttt{metric-learn} too accepts "tuple-like" objects.
-Weakly supervised algorithms (pair and quadruplet learners) \texttt{fit} and \texttt{predict} on a set of tuples passed as a 3D array. Tuples can be pairs or quadruplets depending on the algorithm.
-Pair learners take as input an array-like \texttt{pairs} of shape \texttt{(n\_pairs, 2, n\_features)}, as well as an array-like \texttt{y\_pairs} of shape \texttt{(n\_pairs,)} giving labels (similar or dissimilar) for each pair. In order to \texttt{predict} the labels of new pairs, one needs to set a threshold on the distance value. This threshold can be set manually, or automatically calibrated (at fit time or afterwards on a validation set) to optimize a given performance score such as accuracy or F1-score using the method \texttt{calibrate\_threshold}.
-Quadruplet learners work on array-like of shape \texttt{(n\_quadruplets, 4, n\_features)}, where for each quadruplet the two first elements are the ones we want to be closer than the two last ones. They can naturally \texttt{predict} whether a new quadruplet is in the right order or not by comparing the two pairwise distances.
-These design choices allow to use \texttt{scikit-learn}'s scoring functions out of the box, and therefore all routines for model selection, including the \texttt{GridSearchCV} object.  To illustrate, the following code snippet computes cross validation scores for ITML (with default parameters) on pairs from Labeled Faces in the Wild \citep{Huang12}.
+Weakly supervised algorithms (pair and quadruplet learners) \texttt{fit} and \texttt{predict} on a set of tuples passed as a 3-dimensional array. Tuples can be pairs or quadruplets depending on the algorithm.
+Pair learners take as input an array-like \texttt{pairs} of shape \texttt{(n\_pairs, 2, n\_features)}, as well as an array-like \texttt{y\_pairs} of shape \texttt{(n\_pairs,)} giving labels (similar or dissimilar) for each pair.
+In order to \texttt{predict} the labels of new pairs, one needs to set a threshold on the distance value.
+This threshold can be set manually or automatically calibrated (at fit time or afterwards on a validation set) to optimize a given score such as accuracy or F1-score using the method \texttt{calibrate\_threshold}.
+Quadruplet learners work on array-like of shape \texttt{(n\_quadruplets, 4, n\_features)}, where for each quadruplet the two first elements are the ones we want to be closer than the two last ones. They can naturally \texttt{predict} whether a new quadruplet is in the right order by comparing the two pairwise distances.
+These design choices enable use of \texttt{scikit-learn}'s scoring functions out of the box, as well as the standard routines for model selection, including \texttt{GridSearchCV}.
+To illustrate, the following code snippet computes cross validation scores for ITML (with default parameters) on pairs from Labeled Faces in the Wild \citep{Huang12}.
 % Also note that for every pair/quadruplet learner, there is a \texttt{\_Supervised} version (e.g. for \texttt{MMC} there is \texttt{MMC\_Supervised}, that is a supervised version that samples pairs of similar samples from intra-class samples, and dissimilar samples from inter-class samples, and fits \texttt{MMC} on these pairs).
 \begin{minted}[%linenos=TRUE,
 fontsize=\footnotesize]{python}
